--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,18 @@
           <mat-icon>dialpad</mat-icon>
           <span>People</span>
         </button>
+        <button mat-menu-item routerLink="/genres">
+          <mat-icon>voicemail</mat-icon>
+          <span>Genres</span>
+        </button>
+        <button mat-menu-item routerLink="/themes">
+          <mat-icon>voicemail</mat-icon>
+          <span>Themes</span>
+        </button>
+        <button mat-menu-item routerLink="/awards">
+          <mat-icon>voicemail</mat-icon>
+          <span>Awards</span>
+        </button>
       </mat-menu>
       <span class="spacer"></span>
       <button mat-icon-button [matMenuTriggerFor]="menuAdd" aria-label="Example icon-button with a menu">
