--- a/src/app/components/items-list/items-list.component.scss
+++ b/src/app/components/items-list/items-list.component.scss
@@ -3,6 +3,7 @@
 .mat-grid-tile {
     border: 1px solid variables.$grey-border;
     cursor: pointer;
+    font-family: "pixela";
     .logo {
         max-width: 100%;
     }
