--- a/src/app/pages/franchises/franchise-detail/franchise-detail.page.html
+++ b/src/app/pages/franchises/franchise-detail/franchise-detail.page.html
@@ -1,5 +1,5 @@
 <div *ngIf="franchise">
-    <div class="header-container">
+    <div class="header-container" [style]="backgroundStyle">
         <div class="common-header">
             <div class="side left-info">
                 <div class="titles-container">
