--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @use './variables'; 
 
+@font-face {
+    font-family: 'pixela';
+    src: url('./assets/fonts/pixela-extreme.ttf');
+}
+
 html, body { height: 100%; }
 body { 
     margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    font-family: Roboto, "Helvetica Neue", sans-serif!important; 
 
     .mdc-evolution-chip__action--presentational {
         cursor: pointer;
@@ -43,6 +48,7 @@ body {
             margin-bottom: 14px;
         }
         .title {
+            font-family: "pixela";
             font-size: 42px;
             font-weight: 700;
             line-height: 1.45;
