--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,17 @@
+/* You can add global styles to this file, and also import other style files */
+@use '../variables'; 
+
 .body {
     .toolbar-container {
         background-color: black;
     }
     mat-toolbar {
-        max-width: 1080px;
+        max-width: variables.$max-screen-width;
 
         /* Centers the class */
         margin-left: auto; 
         margin-right: auto;
 
-        padding-right: 20px;
-        padding-left: 20px;
         background-color: black;
         color: white;
         .logo-home {
